--- a/templates/candidate-resources.html
+++ b/templates/candidate-resources.html
@@ -237,7 +237,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
-                    <li><a href="candidate-dashboard-new.html" class="active">Espace candidat</a></li>
+                    <li><a href="candidate-dashboard.html?email=sahar.elsalad%40gmail.com&password=dezd" class="active">Espace candidat</a></li>
                     <li><a href="company-login.html">Espace entreprise</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -248,7 +248,7 @@
     <div class="container main-container" id="main-content">
         <!-- Breadcrumb -->
         <div class="breadcrumb fade-in">
-            <a href="candidate-dashboard-new.html"><i class="fas fa-home"></i> Tableau de bord</a> &gt; 
+            <a href="candidate-dashboard.html?email=sahar.elsalad%40gmail.com&password=dezd"><i class="fas fa-home"></i> Tableau de bord</a> &gt; 
             <span>Centre de ressources & préparation</span>
         </div>
         
@@ -432,7 +432,7 @@
                     <h4 class="footer-heading">Navigation</h4>
                     <ul class="footer-links">
                         <li><a href="index.html"><i class="fas fa-chevron-right"></i> Accueil</a></li>
-                        <li><a href="candidate-dashboard-new.html"><i class="fas fa-chevron-right"></i> Espace candidat</a></li>
+                        <li><a href="candidate-dashboard.html?email=sahar.elsalad%40gmail.com&password=dezd"><i class="fas fa-chevron-right"></i> Espace candidat</a></li>
                         <li><a href="company-login.html"><i class="fas fa-chevron-right"></i> Espace entreprise</a></li>
                         <li><a href="#"><i class="fas fa-chevron-right"></i> À propos</a></li>
                         <li><a href="#contact"><i class="fas fa-chevron-right"></i> Contact</a></li>
