Modification des liens vers le tableau de bord

--- a/templates/candidate-messaging.html
+++ b/templates/candidate-messaging.html
@@ -357,7 +357,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
-                    <li><a href="candidate-dashboard.html?email=sahar.elsalad%40gmail.com&password=dezd" class="active">Espace candidat</a></li>
+                    <li><a href="candidate-dashboard.html?email=jean-olivier.penin%40b-acceptance.com&password=s" class="active">Espace candidat</a></li>
                     <li><a href="company-login.html">Espace entreprise</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -368,7 +368,7 @@
     <div class="container main-container" id="main-content">
         <!-- Breadcrumb -->
         <div class="breadcrumb fade-in">
-            <a href="candidate-dashboard.html?email=sahar.elsalad%40gmail.com&password=dezd"><i class="fas fa-home"></i> Tableau de bord</a> &gt; 
+            <a href="candidate-dashboard.html?email=jean-olivier.penin%40b-acceptance.com&password=s"><i class="fas fa-home"></i> Tableau de bord</a> &gt; 
             <span>Messagerie</span>
         </div>
         
@@ -532,7 +532,7 @@
                     <h4 class="footer-heading">Navigation</h4>
                     <ul class="footer-links">
                         <li><a href="index.html"><i class="fas fa-chevron-right"></i> Accueil</a></li>
-                        <li><a href="candidate-dashboard.html?email=sahar.elsalad%40gmail.com&password=dezd"><i class="fas fa-chevron-right"></i> Espace candidat</a></li>
+                        <li><a href="candidate-dashboard.html?email=jean-olivier.penin%40b-acceptance.com&password=s"><i class="fas fa-chevron-right"></i> Espace candidat</a></li>
                         <li><a href="company-login.html"><i class="fas fa-chevron-right"></i> Espace entreprise</a></li>
                         <li><a href="#"><i class="fas fa-chevron-right"></i> À propos</a></li>
                         <li><a href="#contact"><i class="fas fa-chevron-right"></i> Contact</a></li>
