Mise à jour des liens vers la nouvelle page CV améliorée

--- a/templates/candidate-dashboard.html
+++ b/templates/candidate-dashboard.html
@@ -810,7 +810,7 @@
                     </div>
                 </a>
                 
-                <a href="candidate-cv.html?email=jean-olivier.penin%40b-acceptance.com&password=s" class="dashboard-menu-item">
+                <a href="candidate-cv-improved.html?email=jean-olivier.penin%40b-acceptance.com&password=s" class="dashboard-menu-item">
                     <div class="menu-item-content">
                         <div class="menu-icon">
                             <i class="fas fa-file-alt"></i>
